bk_ida/gccida/c0/gen_sse_movsfcc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_sse_movsfcc/src/insn-emit.c:3014:17: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v6 = gen_rtx( ( rtx_code)( unsigned __int16)*( _DWORD *)operand1, VOIDmode, operand4, operand5); 
                ^~~~~~~~
                rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_sse_movsfcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_sse_movsfcc/src/insn-emit.c:3014:28: error: expected expression
v6 = gen_rtx( ( rtx_code)( unsigned __int16)*( _DWORD *)operand1, VOIDmode, operand4, operand5); 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_sse_movsfcc/src/obj/insn-emit.o] Error 1
